tests/lean/autoBoundImplicits2.lean.expected.out
autoBoundImplicits2.lean:9:0: error: invalid auto implicit argument 'b', it depends on explicitly provided argument 'n'
g1 : ?m → ?m
autoBoundImplicits2.lean:30:17: error: unknown universe level 'u'
autoBoundImplicits2.lean:33:17: error: unknown universe level 'β'
def h1.{u} : {m : Type u → Type u} → {α : Type u} → m α → m α :=
fun {m : Type u → Type u} {α : Type u} (a : m α) => a
